k8s/01-namespace-configmap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: petmatch
  labels:
    name: petmatch
    app: petmatch
